--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,5 @@ version: "3"
 
 services:
   wisdom-frontend:
-    stdin_open: true
-    tty: true
-    build: .
-    ports:
-      - "3000:5173"
-    volumes:
-      - ./src:/app/src:ro
+    build:
+      context: .
