--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ node_modules
 dist
 dist-ssr
 *.local
+.vscode/
 
 # Editor directories and files
 .vscode/*
@@ -25,7 +26,6 @@ dist-ssr
 
 # Yarn
 yarn.lock
-
 
 # Ignore .env files
 .env.*
