--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.2"
+    "react-hook-form": "^7.49.2",
+    "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.2.0",
