--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,7 @@
     "ms-azuretools.vscode-docker",
     "usernamehw.errorlens",
     "dbaeumer.vscode-eslint",
-    "steoates.autoimport"
+    "steoates.autoimport",
+    "styled-components.vscode-styled-components"
   ]
 }
