--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
     "styled-components": "^6.1.6",
+    "textlint": "^13.4.1",
     "uuid": "^9.0.1",
     "yup": "^1.3.3"
   },
