--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.3.4",
+    "date-fns": "^3.2.0",
     "firebase": "^10.7.1",
     "install": "^0.13.0",
     "react": "^18.2.0",
